Converted the Depreciated URL objects with URI