@@ -18,10 +18,8 @@ import java.io.File;
   o MGT - Support defrag
 */
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.ScrolledComposite;
@@ -359,11 +357,8 @@ public class MGTDosPartitionPage extends GenericPage {
 		int i = 0;
 		for (String file : filenames) {
 			try {
-				URL url = new URL(file);
-				URI uri = url.toURI();
+				URI uri = new URI(file);
 				file = uri.getPath();
-			} catch (MalformedURLException e) {
-				System.out.println("Cannot parse " + file);
 			} catch (URISyntaxException e) {
 				System.out.println("Cannot parse " + file);
 			}
